--- a/FixtureManagement.csproj
+++ b/FixtureManagement.csproj
@@ -259,10 +259,12 @@
     <Compile Include="Models\FixturePurchase.cs" />
     <Compile Include="Models\WorkCell.cs" />
     <Compile Include="Service\impl\PurchaseServiceImpl.cs" />
+    <Compile Include="Service\impl\RepairServiceImpl.cs" />
     <Compile Include="Service\impl\ScrapServiceImpl.cs" />
     <Compile Include="Service\InRecordService.cs" />
     <Compile Include="Service\impl\InRecordServiceImpl.cs" />
     <Compile Include="Service\PurchaseService.cs" />
+    <Compile Include="Service\RepairService.cs" />
     <Compile Include="Service\ScrapService.cs" />
     <Compile Include="ViewModels\MenuTreeViewModel.cs" />
     <Compile Include="Models\MenuNode.cs" />
@@ -417,10 +419,10 @@
     <Content Include="Views\FixtureScrap\Apply.cshtml" />
     <Content Include="Views\FixtureScrap\FirstPass.cshtml" />
     <Content Include="Views\FixtureScrap\LastPass.cshtml" />
+    <Content Include="Views\FixtureRepair\Apply.cshtml" />
+    <Content Include="Views\FixtureRepair\DealWith.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\FixtureRepair\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
